Meta tag reassign new pages added

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 <section class="services">
   <h2>Our Services</h2>
   <ul>
-    <li>✔ Electrician Services</li>
-    <li>✔ Plumber Services</li>
-    <li>✔ AC Repair & Installation</li>
+    <li>✔ <a href="electrician.html">Electrician Services</a></li>
+    <li>✔ <a href="plumber.html">Plumber Services</a></li>
+    <li>✔ <a href="serviceone.html">AC Repair & Installation</a></li>
     <li>✔ RO & Water Purifier Repair</li>
     <li>✔ Carpenter & Handyman Services</li>
   </ul>
