--- a/plumber.html
+++ b/plumber.html
@@ -9,11 +9,7 @@
         :root { --primary: #28a745; --dark: #333; --light: #f8f9fa; --white: #fff; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
         body { line-height: 1.6; color: var(--dark); }
-        header { background: var(--white); padding: 1rem; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        nav { display: flex; justify-content: space-between; align-items: center; max-width: 1100px; margin: auto; }
-        .logo { font-size: 1.5rem; font-weight: bold; color: var(--primary); text-decoration: none; }
-        .nav-links a { margin-left: 20px; text-decoration: none; color: var(--dark); font-weight: 500; }
-        .hero { background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1584622650111-993a426fbf0a?auto=format&fit=crop&w=1200&q=80'); background-size: cover; color: var(--white); padding: 100px 20px; text-align: center; }
+         .hero { background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1584622650111-993a426fbf0a?auto=format&fit=crop&w=1200&q=80'); background-size: cover; color: var(--white); padding: 100px 20px; text-align: center; }
         .hero h1 { font-size: 3rem; }
         .btn { background: var(--primary); color: var(--white); padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 20px; }
         .section { padding: 60px 20px; max-width: 1100px; margin: auto; }
@@ -23,18 +19,10 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html" class="logo">CityFix Pro</a>
-            <div class="nav-links">
-                <a href="index.html">AC Repair</a>
-                <a href="electrician.html">Electrical</a>
-                <a href="#contact">Emergency Service</a>
-            </div>
-        </nav>
-    </header>
-
-    <section class="hero">
+   <div id="navbar"></div>
+   
+   
+   <section class="hero">
         <h1>Reliable Plumbing Solutions</h1>
         <p>Expert leak detection and pipe repairs by licensed plumbers.</p>
         <a href="#contact" class="btn">Book a Plumber</a>
@@ -84,4 +72,7 @@
         <p>&copy; 2025 CityFix Pro Services. Professional Plumbing Experts.</p>
     </footer>
 </body>
+        <script>
+        fetch("navbar.html").then(r=>r.text()).then(d=>document.getElementById("navbar").innerHTML=d);
+        </script>
 </html>
