--- a/navbar.html
+++ b/navbar.html
@@ -115,6 +115,6 @@
     <a href="about.html">About</a>
     <a href="why-us.html">Why Choose Us</a>
     <a href="services.html">Services</a>
-    <a href="#contact" class="nav-btn">Book Now</a>
+    <a href="contact.html" >Contact us</a>
   </div>
 </nav>
