--- a/why-us.html
+++ b/why-us.html
@@ -230,12 +230,18 @@
 </div>
 
 
-<footer>
-    © 2025 GrihSeva • The Standard for Gurgaon Home Services
-</footer>
+<div id="footer"></div>
+
 
 </body>
-    <script>
-    fetch("navbar.html").then(r=>r.text()).then(d=>document.getElementById("navbar").innerHTML=d);
-    </script>
+<script>
+  fetch("navbar.html").then(r=>r.text()).then(d=>document.getElementById("navbar").innerHTML=d);
+  </script>
+  <script>
+    fetch("/footer.html")
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
 </html>
